2007-1-25	fabian

	* Added option to send text in custom key-mapping.
	* Added option to disable session-initiated window resize.
	
2007-1-24	fabian

	* Added option to turn off vertical scrollbar.
	* Fixed broken Find.
	* Fixed tab updating glitch.
	* Fixed several full screen related bug/crashes.
	
2007-1-23	fabian

	* Fixed the "report a bug" link in the about panel.
	* Finished full screen support.
	
2007-1-22	fabian
	
	* Fixed a timer function bug that fails to turn of timer after a session is over.
	* Fixed a emulation bug related to an unsupported escape sequences.
	* Changed the "Use Transparency" behavior. Now it's a per window setting. When it's disabled, any updates of
	  display behind the terminal window will not cause a refresh.
	* Unfinished support for full screen mode (still crashes).
	
2007-1-16	fabian

	* Moved updateTimer back to PTYSession and fixed a type of related crash.
	* Improved the handling of title changing. 
	* Changed the timer code in hope of reducing the CPU usage.
	
2007-1-12	fabian

	* Fixed a memory leak in PseudoTerminal.
	* Fixed opening file behavior (#1629686).
	* Added support for opening .command, .tool, .sh, .zsh, .csh, .pl files as shell scripts.
	* Now press TAB in the Execute field will open a new session with the command.
	* Fixed a crash when saving/restoring buffers.
	* More fixes for resizing behaviors.
	
2007-1-11	fabian

	* Clear screen now leaves the last line (which can wrap to several lines) intact.
	* Fixed a bug of cmd-w closing a terminal tab when preference panel is in the front. (#1618969)
	* Fixed hanging-on-printing bug. (#1630780, #1598353)
	* Added support for CSI[0i, which prints out the screen.
	
2007-1-11	fabian

	* Fixed a bug that causes failure to update screen when there's no scrollback buffer.
	* Fixed a few resizing related bugs.
	* Moved display update timers from PTYSession to PseudoTerminal to reduce CPU usage.
	
2007-1-10	fabian
