@@ -54,7 +54,9 @@ either, iTerm generates the standard VT100 sequences. <BR><BR>
 
 <STRONG>Terminal</STRONG><BR><BR>
 
-Terminal profiles let you specify the behavior of terminals. Most settings are straightforward.<BR><BR>
+Terminal profiles let you specify the behavior of terminals. Most settings are straightforward.
+For infinite scrollback, set the scrollback lines to -1. However, enabling this will greatly reduce
+the speed of iTerm. Use it cautiously.<BR><BR>
 
 
 <STRONG>Display</STRONG><BR><BR>
